--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
         "postcss": "^8.1.14",
         "postcss-import": "^12.0.1",
         "tailwindcss": "^2.2.19",
-        "vue": "^3.0.5",
+        "vue": "^3.2.31",
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
+        "aos": "^3.0.0-beta.6",
+        "feather-icons": "^4.28.0",
         "remixicon": "^2.5.0",
+        "vue-aos": "^2.3.0",
+        "vue-feather": "^2.0.0",
         "vue-remix-icons": "^1.1.1"
     }
 }
