--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
         "@tailwindcss/forms": "^0.2.1",
         "@tailwindcss/typography": "^0.3.0",
         "@vue/compiler-sfc": "^3.0.5",
+        "autoprefixer": "^10.4.7",
         "axios": "^0.21",
         "jquery": "^3.6.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.14",
         "postcss-import": "^12.0.1",
-        "tailwindcss": "^2.2.19",
+        "tailwindcss": "^3.0.24",
         "vue": "^3.2.31",
         "vue-loader": "^16.1.2"
     },
